3.1.1/_sources/gallery/lines_bars_and_markers/marker_fillstyle_reference.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_marker_fillstyle_reference.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_marker_fillstyle_reference.py:


=====================
Marker filling-styles
=====================

Reference for marker fill-styles included with Matplotlib.

Also refer to the
:doc:`/gallery/lines_bars_and_markers/marker_fillstyle_reference`
and :doc:`/gallery/shapes_and_collections/marker_path` examples.



.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_marker_fillstyle_reference_001.png
    :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt
    from matplotlib.lines import Line2D


    points = np.ones(5)  # Draw 5 points for each line
    marker_style = dict(color='tab:blue', linestyle=':', marker='o',
                        markersize=15, markerfacecoloralt='tab:red')

    fig, ax = plt.subplots()

    # Plot all fill styles.
    for y, fill_style in enumerate(Line2D.fillStyles):
        ax.text(-0.5, y, repr(fill_style),
                horizontalalignment='center', verticalalignment='center')
        ax.plot(y * points, fillstyle=fill_style, **marker_style)

    ax.set_axis_off()
    ax.set_title('fill style')

    plt.show()


.. _sphx_glr_download_gallery_lines_bars_and_markers_marker_fillstyle_reference.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: marker_fillstyle_reference.py <marker_fillstyle_reference.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: marker_fillstyle_reference.ipynb <marker_fillstyle_reference.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
